--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -58,8 +58,8 @@ spring:
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
   #实体扫描，多个package用逗号或者分号分隔
-  #typeAliasesPackage: com.gili.atms.admin.entity
-  #typeEnumsPackage: com.gili.atms.admin.entity.enums
+  #typeAliasesPackage: com.groot.atms.admin.entity
+  #typeEnumsPackage: com.groot.atms.admin.entity.enums
   global-config:
     #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
     id-type: 0
